# class_loader

./: CMakeLists.txt  README.md  package.xml
cmake_config/: cnr_class_loaderConfig.cmake  cnr_class_loaderConfig.cmake.in
include/cnr_class_loader/: class_loader.hpp  class_loader_core.hpp  exceptions.hpp  meta_object.hpp  multi_library_class_loader.hpp  register_macro.hpp  visibility_control.hpp
src/: class_loader.cpp  class_loader_core.cpp  meta_object.cpp  multi_library_class_loader.cpp
test/: plugins1.cpp  plugins2.cpp  shared_ptr_test.cpp  unique_ptr_test.cpp  utest.cpp
